--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "SURF",
-    "name": "Microsoft Edge SURF",
+    "short_name": "Minesweeper",
+    "name": "Minesweeper - 扫雷游戏",
     "icons": [
         {
             "src": "resources/icons/android-icon-36x36.png",
